# deep_pool

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Anchor.toml  docker-compose.yml  pnpm-lock.yaml  readme.md
db/: 01-schema.sql  02-indexer-role.sh
docs/: audit.md  design.md  events.md  indexer.md  pool-initialization-griefing.md  pool-namespacing.md  properties.md  verification.md  whitepaper.md
idl/: deep_pool.json
indexer/: .env.example  Cargo.toml  Dockerfile  prompt.md
indexer/src/: api.rs  config.rs  constants.rs  contracts.rs  db.rs  error.rs  lib.rs  main.rs
indexer/src/domain/: liquidity.rs  mod.rs  pool.rs  reserves.rs  swap.rs
indexer/src/services/: context.rs  liquidity.rs  mod.rs  pool.rs  reserves.rs  swap.rs
indexer/src/stream/: backfill.rs  decoder.rs  grpc.rs  mod.rs  translate.rs  writer.rs
indexer/tests/: db.rs  decoder.rs
programs/deep_pool/: Cargo.toml
programs/deep_pool/proptest-regressions/: math.txt
programs/deep_pool/src/: constants.rs  error.rs  events.rs  instructions.rs  kani_proofs.rs  lib.rs  math.rs  state.rs
programs/deep_pool/src/instructions/: add_liquidity.rs  create_pool.rs  remove_liquidity.rs  swap.rs
programs/deep_pool/tests/: math_proptests.rs
sim/: deeppool_sim.py
